fix: 태그 삭제 테스트 관련 버그 수정 - 태그 삭제 테스트 시, UnsupportedOperationException 발생 - TagFixture에 실수 리스트를 넣어줄 때, List.of() 대신 ArrayList.asList() 사용